--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>css pow4h</title>
 <script>
 // just to avoid automatic run
-const URL = "http://leaking.localhost.net:3001";
+const URL = "http://141.223.175.203:3001";
 function foo() {
     show.style='display:block;';
     setTimeout("show.style='display:none'; start();", 2000);
